Removed some PMD's
SVN-Revision: 3974